--- a/src/styles/filterPage.scss
+++ b/src/styles/filterPage.scss
@@ -18,6 +18,11 @@
             height: 350px;
             width: 100%;
             object-fit: cover;
+            img{
+                width: 100%;
+                height: 100%;
+                object-fit: contain;
+            }
         }
         .product-info{
             padding: 3px;
