--- a/src/styles/filterPage.scss
+++ b/src/styles/filterPage.scss
@@ -27,6 +27,7 @@
         .product-info{
             padding: 3px;
             border-top: 1px solid gray;
+            font-size: 14px;
         }
           
     }
