--- a/src/styles/filterPage.scss
+++ b/src/styles/filterPage.scss
@@ -10,7 +10,7 @@
         gap: 20px;
         .product-card{
             border: 1px solid gray;
-            height: 420px;
+            height: 450px;
             width: 250px;
             margin-bottom: 20px;
         }
@@ -28,6 +28,14 @@
             padding: 3px;
             border-top: 1px solid gray;
             font-size: 14px;
+            .product-title {
+                font-size: 16px;
+                font-weight: bold;
+                color: #363636;
+            }
+            .product-price{
+                font-style: italic;
+            }
         }
           
     }
