--- a/src/styles/filterPage.scss
+++ b/src/styles/filterPage.scss
@@ -1,9 +1,44 @@
 .filtered-page{
+    height: 100vh;
+    overflow: auto;
+    .header{
+        display: flex;
+        border-bottom: 1px solid #dfdfdf;
+        position: sticky;
+        top: 0;
+        left: 0;
+        width: 100%;
+        z-index: 100000;
+        background: rgb(255 255 255);
+        height: 100px;
+        align-items: center;
+        .header-items{
+            display: flex;
+            padding: 0 40px;
+            justify-content: space-between;
+            width: 100%;
+            .cart{
+                position: relative;
+            }
+            .added-products-count {
+                right: -10px;
+                top: -10px;
+                position: absolute;
+                border-radius: 50px;
+                width: 20px;
+                height: 20px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                font-size: 11px;
+                background: #afafaf;
+            }
+        }
+    }
     .filtering-functions {
         display: flex;
         justify-content: space-between;
-        padding: 40px;
-        border-bottom: 1px solid gray;
+        padding: 30px 40px 0 40px;
         .search{
             input{
                 width: 300px;
@@ -16,15 +51,26 @@
                 }
             }
         }
+        select:focus, select:active{
+            outline: none
+        }
+        #category-list{
+            height: 40px;
+            width: 150px;
+            padding: 3px;
+            border-radius: 3px;
+            border: 1px solid #949494;
+        }
     }
     .filtered-products{
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
         gap: 20px;
+        margin-top: 30px;
         .product-card{
             border: 1px solid gray;
-            height: 470px;
+            height: 490px;
             width: 250px;
             margin-bottom: 20px;
         }
@@ -42,6 +88,7 @@
             padding: 3px;
             border-top: 1px solid gray;
             font-size: 14px;
+            position: relative;
             .product-title {
                 font-size: 16px;
                 font-weight: bold;
@@ -49,6 +96,16 @@
             }
             .product-price{
                 font-style: italic;
+            }
+            .add-to-cart {
+                width: 30px;
+                height: 30px;
+                position: absolute;
+                right: 10px;
+                bottom: -13px;
+                cursor: pointer;
+                border: 2px solid #00be66;
+                border-radius: 3px;
             }
         }
           
